5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1646_2729.log
== TEST (2019-04-13 12:22:47) 
-- CODE:
f=input("Insira o primeiro numero:")
s=input("Insira o segundo numero:")

if ((f+s)%2 = 0):
	v= f+s
else:
	v = f-s
print(v)
-- ERROR:
File "XXXX", line 4
    if ((f+s)%2 = 0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:22:57) 
-- CODE:
f=input("Insira o primeiro numero:")
s=input("Insira o segundo numero:")

if ((f+s)%2 == 0):
	v= f+s
else:
	v = f-s
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((f+s)%2 == 0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:23:36) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if ((f+s) %2 == 0):
	v= f+s
else:
	v = f-s
print(v)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:24:07) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if (f+s %2 == 0):
	v= f+s
else:
	v = f-s
print(v)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:24:21) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if (f+s %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:24:26) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if (f+s %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- EXECUTION TIME:
0.117967
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:24:47) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if (f+s %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:26:32) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if (f+s %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:26:45) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))

if (f+s %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:27:26) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:27:30) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- EXECUTION TIME:
0.148318
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:27:33) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:27:39) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- EXECUTION TIME:
0.121714
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:27:46) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 == 0):
	v= f+s
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:28:35) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 == 0):
	v= a
else:
	v = s-f
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:29:09) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 =! 0):
	v = s-f
else:
	v=a
print(v)
-- ERROR:
File "XXXX", line 4
    if ( a %2 =! 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:29:18) 
-- CODE:
f=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
a= f+s
if ( a %2 != 0):
	v = s-f
else:
	v=a
print(v)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
